Updated about page with more information about the project, where the data comes from, and credits list.

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
         color: floralwhite;
     }
     a:visited {
-        color: fuchsia;
+        color: lightpink;
     }
     .content {
         max-width: 900px;
@@ -31,18 +31,56 @@
         <h1 style="font-size: 60px; font-weight: bold">About</h1>
         <p>
             <br>
-            Helios uses modeled history and projection data to help you choose the best possible place for retirement
-            while considering climate change factors. The projections are based on two scenarios: humans changing
+            <h3>What it Does</h3>
+            <br>
+            Helios uses climate change projection data about various climate factors to help you choose
+            the best possible place for retirement. The projections are based on two scenarios: humans changing
             course to significantly lower emissions, or humans continuing on the current course to increasingly
             higher emissions.
-        </p>
-        <p>
-            To use the program, choose a location and the decade you plan to retire and we will search our database
-            for climate change projections so you can make an informed decision about where to retire.
-        </p>
-        <p style="text-align: center">
             <br><br>
-            All data is courtesy of the <a href="https://crt-climate-explorer.nemac.org/">NOAA Climate Explorer</a>.
+            <h3>How it Works</h3>
+            <br>
+            To use the program, choose a location and the decade you plan to retire and we will search our database
+            for climate change projections so you can make an informed decision about where to retire. We did our best
+            to come up with a comprehensive list of locations for the continental United States. However, if you do not
+            see your desired destination on list, pick the closest known location and the results will be very similar,
+            if not the same.
+            <br><br>
+            <h3>About the Data</h3>
+            <br>
+            Climate data is organized by county and natural disasters data is organized by state. We felt the most relevant
+            climate factors for a comfortable retirement destination were average temperature, temperature extremes, total
+            precipitation, and number of dry days a year. Our retirement score is an average of the combined scores for
+            each climate variable, which are calculated using formulas that assess deviation from either an ideal value or
+            the national average, depending on the variable. Please check out our resources if you would like to learn more
+            or check our program for accuracy:
+            <br><br><br>
+            Climate data and projections: <a href="https://crt-climate-explorer.nemac.org/">NOAA Climate Explorer</a>.
+            <br><br>
+            Hurricane data by state:
+            <a href="https://www.policygenius.com/homeowners-insurance/states-with-the-most-hurricanes/">Policygenius.com</a>
+            <br><br>
+            Tornado data by state:
+            <a href="https://www.policygenius.com/homeowners-insurance/states-with-the-most-hurricanes/">Policygenius.com</a>
+            <br><br>
+            Wildfire data by state:
+            <a href="https://www.policygenius.com/homeowners-insurance/wildfires-by-state/">Policygenius.com</a>
+            <br><br>
+            Earthquake data by state:
+            <a href="https://hosbeg.com/state-rankings-earthquakes-united-states/">Hosbeg.com</a>
+            <br><br>
+            <h3>Credits</h3>
+            <br>
+            The Helios Retirement Destination Planner is a Computer Science capstone project created by students at the
+            University of Maryland Global Campus. This is a list of roles and contributions from the
+            participating students.<br><br>
+            Front-end and back-end developer: Deysha Rivera <br><br>
+            Project design: Deysha Rivera, Martial Xavier Wonna Njewou <br><br>
+            Project concept: Maxime Dugas-Davis <br><br>
+            Brainstorming: Deysha Rivera, Kevin Schneider, Martial Xavier Wonna Njewou <br><br>
+            Climate data research: Deysha Rivera <br><br>
+            Natural disasters data research: Kevin Schneider <br><br>
+            Testing: Martial Xavier Wonna Njewou, Kevin Schneider, Maxime Dugas-Davis
         </p>
         <p style="text-align: center">
             <br><br><br><br>
