--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,22 @@
     select {
         font-size: 18px;
     }
+    .footer {
+        position: absolute;
+        left: 0;
+        bottom: 10px;
+        width: 100%;
+        margin: auto;
+        justify-content: center;
+        color: floralwhite;
+        text-align: center;
+    }
     input {
+        font-size: 18px;
+        background-color: white;
+        font-family: sans-serif;
+    }
+    .select2 {
         font-size: 18px;
     }
     .dropdown {
@@ -21,49 +36,73 @@
         font-size: 14px;
         font-family: sans-serif;
     }
-    .aboutButton {
-        text-align: center;
-        background-color: gray;
-        color: floralwhite;
+    .topnav {
+        overflow: hidden;
+        background-color: #292929;
+    }
+    .topnav a {
         float: right;
-        margin-right: 30px;
+        color: floralwhite;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
         font-size: 20px;
-        padding: 16px 32px;
-        margin-top: 10px;
+        font-family: 'Arial Rounded MT Bold';
+    }
+    .topnav a:hover {
+        background-color: floralwhite;
+        color: black;
+    }
+    .topnav a.active {
+        background-color: floralwhite;
+        color: black;
     }
 </style>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helios Retirement Planner</title>
+    <!-- Select2 jQery replacement for select boxes style sheets CDN-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="home">Home</a>
+        <a href="about">About</a>
+        <a href="interactive_map">Interactive Map</a>
+    </div>
     <div style="margin-left: 20px; color: floralwhite; font-family: 'Arial Rounded MT Bold'; padding-top: 10px">
         <p>
-            <span style="font-size: 60px; font-weight: bold">HELIOS</span>
-            <span><button class="aboutButton"; onclick="window.location.href='about'">&nbsp;&nbsp;About&nbsp;&nbsp;&nbsp;</button></span>
-            <br>
+            <span style="font-size: 60px; font-weight: bold">HELIOS</span><br>
             <span style="font-size: 20px">Retirement Destination Planner</span>
         </p>
     </div>
+    <!-- select form with two dropdown menus and input button -->
     <div>
     <br>
         <form class="dropdown"; method='POST'; action = {{ url_for('post_results') }}>
-                <select name="locations" id="locations">
-                    <option value="location" selected>Choose a retirement destination: </option>
+                <!-- select2 dropdown with searching -->
+                <select class="select2" name="locations" id="locations" data-width="25%">
+                    <option value="location" selected disabled>Choose a retirement location</option>
                     {% for location in locations[0:] %}
                         <option value="{{ location }}">{{ location }}</option>
                     {% endfor %}
-                </select>
-                <select name="decades" id="decades">
-                    <option value="decade" selected>Choose a retirement decade: </option>
+                </select>&nbsp;&nbsp;
+                <!-- select2 dropdown with searching disabled -->
+                <select class="select2" name="decades" id="decades" data-width="25%" data-minimum-results-for-search="Infinity">
+                    <option value="decade" selected disabled>Choose a retirement decade</option>
                     {% for decade in decades[0:] %}
                         <option value="{{ decade }}">{{ decade }}</option>
                     {% endfor %}
                 </select>
+                <br><br>
+                <!-- submit search button -->
                 <input type="submit" value="  SEARCH  ">
         </form>
     </div>
+    <!-- flash error messages -->
     <div>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
@@ -74,6 +113,15 @@
                 </ul>
             {% endif %}
         {% endwith %}
+    </div>
+    <!-- Select2 jQery replacement script for select boxes -->
+    <script>
+        $(document).ready(function() {
+            $(".select2").select2();
+        })
+    </script>
+    <div class="footer">
+        <small>&copy Copyright 2022, Helios Retirement Destination Planner. All Rights Reserved.</small>
     </div>
 </body>
 </html>
