--- a/templates/about.html
+++ b/templates/about.html
@@ -13,6 +13,7 @@
         justify-content: center;
         color: floralwhite;
         text-align: center;
+        font-family: sans-serif;
     }
     a:link {
         color: floralwhite;
@@ -29,7 +30,7 @@
     }
     .topnav {
         overflow: hidden;
-        background-color: #292929;
+        background-color: #212121;
     }
     .topnav a {
         float: right;
@@ -41,12 +42,12 @@
         font-family: 'Arial Rounded MT Bold';
     }
     .topnav a:hover {
-        background-color: floralwhite;
-        color: black;
+        background-color: #292929;
+        color: floralwhite;
     }
     .topnav a.active {
-        background-color: floralwhite;
-        color: black;
+        background-color: #292929;
+        color: floralwhite;
     }
 </style>
 <head>
