--- a/templates/results.html
+++ b/templates/results.html
@@ -16,6 +16,7 @@
         justify-content: center;
         color: floralwhite;
         text-align: center;
+        font-family: sans-serif;
     }
     a:link {
         color: floralwhite;
@@ -44,9 +45,9 @@
         text-align: center;
         padding-top: 20px;
     }
-        .topnav {
+    .topnav {
         overflow: hidden;
-        background-color: #292929;
+        background-color: #212121;
     }
     .topnav a {
         float: right;
@@ -58,12 +59,12 @@
         font-family: 'Arial Rounded MT Bold';
     }
     .topnav a:hover {
-        background-color: floralwhite;
-        color: black;
+        background-color: #292929;
+        color: floralwhite;
     }
     .topnav a.active {
-        background-color: floralwhite;
-        color: black;
+        background-color: #292929;
+        color: floralwhite;
     }
 </style>
 <head>
