--- a/templates/about.html
+++ b/templates/about.html
@@ -112,7 +112,7 @@
             Front-end and back-end developer: Deysha Rivera <br><br>
             Project design: Deysha Rivera, Martial Xavier Wonna Njewou <br><br>
             Project concept: Maxime Dugas-Davis <br><br>
-            Project documentation: Deysha Rivera, Maxime Dugas-Davis
+            Project documentation: Deysha Rivera, Maxime Dugas-Davis<br><br>
             Brainstorming: Deysha Rivera, Kevin Schneider, Martial Xavier Wonna Njewou <br><br>
             Climate data research: Deysha Rivera <br><br>
             Natural disasters data research: Kevin Schneider <br><br>
