--- a/templates/home.html
+++ b/templates/home.html
@@ -24,6 +24,7 @@
         text-align: center;
         font-family: sans-serif;
     }
+    /* input button - for some reason it made me style each border separately */
     input {
         font-size: 16px;
         background-color: #3D3D3D;
@@ -31,6 +32,7 @@
         font-family: sans-serif;
         border-radius: 12px;
         border-color: #3D3D3D;
+        border-top: #3D3D3D;
         border-bottom: #3D3D3D;
         border-right: #3D3D3D;
         width: 25%;
@@ -78,7 +80,8 @@
     }
     /* search field border color */
     .select2-search__field {
-        border-color: #3D3D3D !important;
+        border-color: #212121 !important;
+        border-radius: 0px;
     }
     /* Selected / Initial state input */
     .select2-container--default .select2-selection--single .select2-selection__rendered {
