--- a/templates/results.html
+++ b/templates/results.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <style>
     body {
-        background: #292929;
+        background: #102A43;
         margin: 0;
     }
     img {
@@ -48,7 +48,7 @@
     }
     .topnav {
         overflow: hidden;
-        background-color: #212121;
+        background-color: #334E68;
     }
     .topnav a {
         float: right;
@@ -60,11 +60,11 @@
         font-family: 'Arial Rounded MT Bold';
     }
     .topnav a:hover {
-        background-color: #292929;
+        background-color: #102A43;
         color: floralwhite;
     }
     .topnav a.active {
-        background-color: #292929;
+        background-color: #102A43;
         color: floralwhite;
     }
 </style>
