--- a/templates/about.html
+++ b/templates/about.html
@@ -110,14 +110,12 @@
             University of Maryland Global Campus. This is a list of roles and contributions from the
             participating students.<br><br>
             Front-end and back-end developer: Deysha Rivera <br><br>
-            Project design: Deysha Rivera, Martial Xavier Wonna Njewou <br><br>
             Project concept: Maxime Dugas-Davis <br><br>
+            Project design: Deysha Rivera, Martial Xavier Wonna Njewou <br><br>
             Interactive map: Maxime Dugas-Davis <br><br>
-            Project documentation: Deysha Rivera, Maxime Dugas-Davis<br><br>
-            Brainstorming: Deysha Rivera, Kevin Schneider, Martial Xavier Wonna Njewou <br><br>
             Climate data research: Deysha Rivera <br><br>
             Natural disasters data research: Kevin Schneider <br><br>
-            Testing: Martial Xavier Wonna Njewou, Kevin Schneider, Maxime Dugas-Davis
+            Testing: Martial Xavier Wonna Njewou, Kevin Schneider, Deysha Rivera
         </p>
         <p style="text-align: center">
             <br><br><br><br>
