--- a/templates/500.html
+++ b/templates/500.html
@@ -25,7 +25,7 @@
 </style>
 <head>
     <meta charset="UTF-8">
-    <title>505 Internal Error</title>
+    <title>Internal Server Error</title>
 </head>
 <body>
     <div class="content">
