--- a/templates/home.html
+++ b/templates/home.html
@@ -60,7 +60,7 @@
         font-family: 'Arial Rounded MT Bold';
     }
     .topnav a:hover {
-        background-color: #334E68;
+        background-color: #102A43;
         color: floralwhite;
     }
     .topnav a.active {
