--- a/templates/about.html
+++ b/templates/about.html
@@ -59,7 +59,7 @@
     <div class="topnav">
         <a class="active" href="about">About</a>
         <a href="home">Home</a>
-        <a href="interactive_map">Interactive Map</a>
+        <a href="mailto:heliosproject2080@gmail.com">Contact</a>
     </div>
     <div class="content">
         <br><br>
@@ -111,11 +111,10 @@
             participating students.<br><br>
             Front-end and back-end developer: Deysha Rivera <br><br>
             Project concept: Maxime Dugas-Davis <br><br>
-            Project design: Deysha Rivera, Martial Xavier Wonna Njewou <br><br>
-            Interactive map: Maxime Dugas-Davis <br><br>
+            Project design: Deysha Rivera <br><br>
             Climate data research: Deysha Rivera <br><br>
             Natural disasters data research: Kevin Schneider <br><br>
-            Testing: Martial Xavier Wonna Njewou, Kevin Schneider, Deysha Rivera
+            Testing: Kevin Schneider, Deysha Rivera
         </p>
         <p style="text-align: center">
             <br><br><br><br>
