--- a/templates/home.html
+++ b/templates/home.html
@@ -112,7 +112,7 @@
     }
     /* Selected item highlight */
     .select2-container--default .select2-results__option--selected {
-        background: #3D3D3D !important;
+        background: #BCCCDC !important;
         color: black !important;
     }
     /* Search result message area */
@@ -153,7 +153,7 @@
     <div class="topnav">
         <a class="active" href="home">Home</a>
         <a href="about">About</a>
-        <a href="interactive_map">Interactive Map</a>
+        <a href="mailto:heliosproject2080@gmail.com">Contact</a>
     </div>
     <div style="margin-left: 20px; color: floralwhite; font-family: 'Arial Rounded MT Bold'; padding-top: 10px">
         <p>
