--- a/templates/results.html
+++ b/templates/results.html
@@ -76,7 +76,7 @@
     <div class="topnav">
         <a href="home">Home</a>
         <a href="about">About</a>
-        <a href="interactive_map">Interactive Map</a>
+        <a href="mailto:heliosproject2080@gmail.com">Contact</a>
     </div>
     <div class="content">
         <h1>Results for {{ location }} in {{ decade }}</h1>
