--- a/templates/about.html
+++ b/templates/about.html
@@ -76,10 +76,10 @@
             <h3>How it Works</h3>
             <br>
             To use the program, choose a location and the decade you plan to retire and we will search our database
-            for climate change projections so you can make an informed decision about where to retire. We did our best
-            to come up with a comprehensive list of locations for the continental United States. However, if you do not
-            see your desired destination on list, pick the closest known location and the results will be very similar,
-            if not the same.
+            for climate change projections and provide a retirement score on a scale of 1 to 10 so you can make an
+            informed decision about where to retire. We did our best to come up with a comprehensive list of locations
+            for the continental United States. However, if you do not see your desired destination on list, pick the
+            closest known location and the results will be very similar, if not the same.
             <br><br>
             <h3>About the Data</h3>
             <br>
@@ -109,6 +109,7 @@
             The Helios Retirement Destination Planner is a Computer Science capstone project created by students at the
             University of Maryland Global Campus. This is a list of roles and contributions from the
             participating students.<br><br>
+            Project manager: Deysha Rivera <br><br>
             Front-end and back-end developer: Deysha Rivera <br><br>
             Project concept: Maxime Dugas-Davis <br><br>
             Project design: Deysha Rivera <br><br>
