--- a/templates/home.html
+++ b/templates/home.html
@@ -74,7 +74,7 @@
     }
     /* Search Box border */
     .select2-search--dropdown {
-        background: #181818 !important;
+        background: #334E68 !important;
     }
     /* search field border color */
     .select2-search__field {
