--- a/templates/home.html
+++ b/templates/home.html
@@ -74,12 +74,12 @@
     }
     /* Search Box border */
     .select2-search--dropdown {
-        background: #334E68 !important;
+        background: floralwhite !important;
     }
     /* search field border color */
     .select2-search__field {
-        border-color: #181818 !important;
-        border-radius: 1px;
+        border-color: #102A43 !important;
+        border-radius: 2px;
     }
     /* Selected / Initial state input */
     .select2-container--default .select2-selection--single .select2-selection__rendered {
@@ -104,11 +104,11 @@
     }
     /* change container border color */
     .select2-container .select2-selection--single {
-        border-color: #AAAAAA !important;
+        border-color: #102A43 !important;
     }
     /* change dropdown border color */
     .select2-dropdown--below {
-        border-color: #181818 !important;
+        border-color: #102A43 !important;
     }
     /* Selected item highlight */
     .select2-container--default .select2-results__option--selected {
